--- a/app/views/solutions/_show.html.erb
+++ b/app/views/solutions/_show.html.erb
@@ -1,6 +1,8 @@
 <% # Clients of this partial must supply the following variable:
    # solution %>
 
+<% list_options = options_for_select(@lists.collect{|l| [l.name, l.id]}, @list_id) unless @lists.nil? %>
+
 <p>
   <b>Solution <%= solution.name %></b>
 </p>
@@ -14,6 +16,32 @@
   <b>Detailed Explanation:</b>
   <%= solution.content_html.html_safe %>
 </p>
+
+<% if solution.is_published? %>
+<% if solution.can_be_derived_by?(current_user) || user_is_admin? %>
+<b>Create a derived solution:</b>
+<%= form_tag derive_solution_path(solution) do %>
+  <div class="actions">
+    <%= submit_tag 'Create derivation', :class => submit_classes %>
+  </div>
+<% end %>
+<% end %>
+
+<% if solution.new_version_can_be_created_by?(current_user) || user_is_admin? %>
+<b>New version:</b>
+<%= form_tag new_version_solution_path(solution) do %>
+  <div class="actions">
+    <%= submit_tag 'Create new version', :class => submit_classes %>
+  </div>
+<% end %>
+<% end %>
+<% else %>
+<p>This solution has not been published yet.</p>
+<% end %>
+
+<% if solution.can_be_published_by?(current_user) || user_is_admin? %>
+<%= link_to 'Publish', publication_agreement_publishables_path(:solution_id => solution.id) %> |
+<% end %>
 
 <% if solution.can_be_updated_by?(current_user) || user_is_admin? %>
 <%= link_to 'Edit', edit_solution_path(solution) %> |
