--- a/app/views/attachments/edit.html.erb
+++ b/app/views/attachments/edit.html.erb
@@ -1,6 +1,5 @@
-<%= page_heading 'Editing asset' %>
+<%= page_heading 'Editing attachment' %>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @attachable_asset %> |
-<%= link_to 'Back', attachable_assets_path %>
+<%= link_to 'Back', @attachment.attachable %>
