--- a/app/views/attachments/new.html.erb
+++ b/app/views/attachments/new.html.erb
@@ -1,5 +1,5 @@
-<%= page_heading 'New asset' %>
+<%= page_heading 'New attachment' %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', attachable_assets_path %>
+<%= link_to 'Back', @attachable %>
