--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -48,6 +48,10 @@
 <p>This exercise has not been published yet.</p>
 <% end %>
 
+<%= render :partial => 'attachments/index', :locals => {:attachable => @exercise} %>
+
+<br/><br/>
+
 <%= link_to 'Solutions', exercise_solutions_path(@exercise) %> |
 
 <% if @exercise.can_be_published_by?(current_user) || user_is_admin? %>
