--- a/app/views/licenses/_cc_by_3_0.html.erb
+++ b/app/views/licenses/_cc_by_3_0.html.erb
@@ -3,7 +3,7 @@
 
 The <%= link_to "Attribution", license.url %> license from <a href="http://creativecommons.org/">Creative Commons</a> fulfills this requirement, while still allowing authors to receive credit for their efforts. Please take the time to read the license and check the I agree box below before continuing.</p>
 
-<p>I hereby allow Quadbase to distribute this content under the terms of the Creative Commons Attribution License available at <%= link_to license.url, license.url %>. I understand that in doing so I</p>
+<p>I hereby allow OpenStax Exercises to distribute this content under the terms of the Creative Commons Attribution License available at <%= link_to license.url, license.url %>. I understand that in doing so I</p>
 
 <ol>
    <li>retain my copyright in the work and</li>
