started pulling in new way from tutor

--- a/app/views/static_pages/developers.html.erb
+++ b/app/views/static_pages/developers.html.erb
@@ -1,6 +1,6 @@
 <%= page_heading 'Developers' %>
 
-<%= section_block "Code against our API" do |sb| %>
+<%= osu.section_block "Code against our API" do |sb| %>
 
   <p>Our API is cool Sed ut perspiciatis unde omnis iste natus error sit 
      voluptatem accusantium doloremque laudantium, totam rem aperiam, 
