--- a/app/views/admin/base/index.js.erb
+++ b/app/views/admin/base/index.js.erb
@@ -1,4 +1,4 @@
 Exercises.Ui.renderAndOpenDialog(
-  'dev_console_dialog', 
+  'admin_console_dialog', 
   '<%= j(render :partial => "console_dialog") %>'
 );
