--- a/app/views/dev/base/_create_users.html.erb
+++ b/app/views/dev/base/_create_users.html.erb
@@ -6,7 +6,7 @@
     First name <%= f.text_field :first_name, class: 'm-wrap' %><br/>
     Last name <%= f.text_field :last_name, class: 'm-wrap' %><br/>
     Username <%= f.text_field :username, class: 'm-wrap' %><br/>
-    Admin? <%= f.check_box :is_administrator, class: 'm-wrap m-checkbox' %><br/>
+    Admin? <%= f.check_box :is_admin, class: 'm-wrap m-checkbox' %><br/>
 
     <%= f.submit 'Register', class: 'm-btn blue' %>
   <% end %>
