Added markItUp to all relevant text areas (no image dialog yet)

--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -16,7 +16,7 @@
   </p>
 
   <div class="field">
-    <%= f.text_area :content %>
+    <%= f.text_area :content, :class => "markItUp" %>
   </div>
   <div class="field">
 
