--- a/app/views/exercises/questions/free_response_answers/_form.html.erb
+++ b/app/views/exercises/questions/free_response_answers/_form.html.erb
@@ -14,11 +14,11 @@
 
       <div class="field">
         <%= a.label :content %><br />
-        <%= a.text_area :content %>
+        <%= a.text_area :content, :class => "markItUp" %>
       </div>
       <div class="field">
         <%= a.label :free_response %><br />
-        <%= a.text_area :free_response %>
+        <%= a.text_area :free_response, :class => "markItUp" %>
       </div>
       <div class="field">
         <%= a.label :can_be_sketched, 'Can be sketched?', :class => 'float-left' %>
