--- a/app/views/exercises/questions/matching_answers/_form.html.erb
+++ b/app/views/exercises/questions/matching_answers/_form.html.erb
@@ -15,7 +15,7 @@
 
       <div class="field inline-block">
         <%= a.label :left_content, 'Left half' %><br/>
-        <%= a.text_area :left_content %>
+        <%= a.text_area :left_content, :class => "markItUp" %>
       </div>
 
       <div class="inline-block" style="width: 100px;">
@@ -24,7 +24,7 @@
 
       <div class="field inline-block">
         <%= a.label :right_content, 'Right half' %><br/>
-        <%= a.text_area :right_content %>
+        <%= a.text_area :right_content, :class => "markItUp" %>
       </div>
 
       <div class="clear">
