--- a/app/views/exercises/questions/multiple_choice_answers/_form.html.erb
+++ b/app/views/exercises/questions/multiple_choice_answers/_form.html.erb
@@ -14,7 +14,7 @@
 
       <div class="field">
         <%= a.label :content %><br />
-        <%= a.text_area :content %>
+        <%= a.text_area :content, :class => "markItUp" %>
       </div>
 
       <%= a.link_to_remove "Remove this multiple choice", confirm: 'Are you sure you wish to remove this multiple choice and all associated content?' %><br/><br/>
