--- a/app/views/exercises/questions/short_answers/_form.html.erb
+++ b/app/views/exercises/questions/short_answers/_form.html.erb
@@ -14,7 +14,7 @@
 
       <div class="field">
         <%= a.label :content %><br />
-        <%= a.text_area :content %>
+        <%= a.text_area :content, :class => "markItUp" %>
       </div>
       <div class="field">
         <%= a.label :short_answer %><br />
