--- a/app/views/exercises/questions/true_or_false_answers/_form.html.erb
+++ b/app/views/exercises/questions/true_or_false_answers/_form.html.erb
@@ -15,7 +15,7 @@
 
       <div class="field">
         <%= a.label :content %><br />
-        <%= a.text_area :content %>
+        <%= a.text_area :content, :class => "markItUp" %>
       </div>
       <div class="field">
         <%= a.label :is_true, 'Is this true?', :class => 'float-left' %>
