--- a/app/views/solutions/_form.html.erb
+++ b/app/views/solutions/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :content, 'Detailed Explanation' %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content, :class => "markItUp" %>
   </div>
 
   <div class="license">
