--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,8 +14,10 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require_bootstrap
  *= require jquery-ui
  *= require main
  *= require_tree .
- *= require modern-buttons
  */
+
+@import "bootstrap";
