--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -1,4 +1,5 @@
 @import 'common';
+@import 'bootstrap';
 
 .modal-backdrop {
   opacity: 0.6;
@@ -20,4 +21,14 @@
 
 .nav.tight-bottom {
   margin-bottom: 0px;
+}
+
+button, input[type='submit'] {
+  @extend .btn;
+  @extend .btn-primary;
+  @include border-radius(0px);
+}
+
+select, input[type='text'] {
+  @extend .form-control;
 }
