--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -5,4 +5,6 @@
 @import "common_dimensions";
 @import "common_misc";
 @import "common_body_margins";  
+@import "compass/css3";
+@import "compass/utilities";
 
