--- a/app/assets/stylesheets/common_misc.css.scss
+++ b/app/assets/stylesheets/common_misc.css.scss
@@ -2,6 +2,7 @@
 // License version 3 or later.  See the COPYRIGHT file for details.
 
 @import "common_colors";
+// @import "modern-buttons/m-buttons";
 
 @mixin vertical-bar-common {
   display:      inline;
@@ -18,6 +19,14 @@
   background-color: white;
   border: 1px solid rgb(228, 224, 222);
   padding: 10px;
+}
+
+@mixin page-heading {
+  padding: 10px 0 12px;
+  font-size: 16px;
+  font-weight: 700;
+  font-style: normal;
+  color: $os_gray;
 }
 
 @mixin std-table-list-1 {
@@ -48,3 +57,13 @@
     }
   }
 }
+
+
+
+@mixin m-btn-standard {
+  @extend .m-btn, .m-btn.blue;
+  &:hover, &:active, &:focus {
+    color: white;
+  }
+}
+
