--- a/app/views/dev/base/_create_users.html.erb
+++ b/app/views/dev/base/_create_users.html.erb
@@ -1,23 +1,45 @@
 <%= osu.section_block "Create a new user" do %>
 
-  <%= lev_form_for :create, url: dev_users_create_path, remote: true, 
-                   html: {id: 'create-user-form'} do |f| %>
+  <div style="width: 500px">
+    <%= lev_form_for :create, url: dev_users_create_path, remote: true, 
+                     html: {id: 'create-user-form', class: 'form-horizontal'} do |f| %>
 
-    First name <%= f.text_field :first_name, class: 'm-wrap' %><br/>
-    Last name <%= f.text_field :last_name, class: 'm-wrap' %><br/>
-    Username <%= f.text_field :username, class: 'm-wrap' %><br/>
-    Admin? <%= f.check_box :is_admin, class: 'm-wrap m-checkbox' %><br/>
+      <div class='form-group'>
+        <label class='col-sm-3 control-label'>First name</label>
+        <div class='col-sm-9'>
+          <%= f.text_field :first_name, class: 'form-control' %>
+        </div>
+      </div>
+      <div class='form-group'>
+        <label class='col-sm-3 control-label'>Last name</label>
+        <div class='col-sm-9'>
+          <%= f.text_field :last_name, class: 'form-control' %>
+        </div>
+      </div>
+      <div class='form-group'>
+          <label class='col-sm-3 control-label'>Admin?</label>
+          <div class=' col-sm-9'>
 
-    <%= f.submit 'Register', class: 'm-btn blue' %>
-  <% end %>
+              <%= f.check_box :is_admin %>
+
+          </div>
+      </div>
+      <div class='form-group'>
+        <div class='col-sm-offset-3 col-sm-9'>
+          <%= f.submit 'Register' %>
+        </div>
+      </div>
+
+    <% end %>
+  </div>
 
 <% end %>
 
 <%= osu.section_block "Generate new users" do %>
     <%= lev_form_for :generate, url: dev_users_generate_path, remote: true,
-                     html: {id: 'generate-users-form'} do |f| %>
+                     html: {id: 'generate-users-form', class: 'form-inline'} do |f| %>
                      
-      Generate <%= f.text_field :count, style: 'width:30px', class: 'm-wrap' %> user(s) 
-      <%= f.submit 'Do it now!', class: 'm-btn blue' %>
+      Generate <%= f.text_field :count, style: 'width:30px' %> user(s) 
+      <%= f.submit 'Do it now!' %>
     <% end %>
 <% end %>
