Added attachments dialog with AJAX image uploading

--- a/app/assets/stylesheets/ose_markitup_style.css
+++ b/app/assets/stylesheets/ose_markitup_style.css
@@ -22,7 +22,6 @@
 	background-image:url(markitup/sets/default/images/list-numeric.png);
 }
 
-
 .markItUp .markItUpButton7 a {
-	background-image:url(images/math.png);
+	background-image:url(math.png);
 }
