--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -65,6 +65,8 @@
   </div>
   <% end %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => submit_classes %>
   </div>
 <% end %>
+
+<%= render :partial => 'attachments/dialog', :locals => {:attachable => @exercise} %>
