Added submit_classes to everything except doorkeeper; added attachments list and dialog to solutions

--- a/app/views/admin/licenses/_form.html.erb
+++ b/app/views/admin/licenses/_form.html.erb
@@ -36,6 +36,6 @@
     <%= f.check_box :allow_solutions %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => submit_classes %>
   </div>
 <% end %>
