--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -26,6 +26,6 @@
   <p>
      
   <div class="actions">
-    <%= f.submit(nil , :class => "#{submit_classes}") %>
+    <%= f.submit :class => submit_classes %>
   </div>
 <% end %>
