--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -52,6 +52,7 @@
 <p>This exercise has not been published yet.</p>
 <% end %>
 
+<b>Attachments:</b>
 <%= render :partial => 'attachments/index', :locals => {:attachable => @exercise} %>
 
 <br/><br/>
