--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.check_box :is_public %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => submit_classes %>
   </div>
 <% end %>
