--- a/app/views/publishables/publication_agreement.html.erb
+++ b/app/views/publishables/publication_agreement.html.erb
@@ -61,7 +61,7 @@
     <center>
        <%= submit_tag 'Publish',
                       :id => 'publish_submit',
-                      :class => "#{submit_classes}" %>
+                      :class => submit_classes %>
     </center>
   <% end %>
 
