--- a/app/views/solutions/_form.html.erb
+++ b/app/views/solutions/_form.html.erb
@@ -26,6 +26,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => submit_classes %>
   </div>
 <% end %>
+
+<%= render :partial => 'attachments/dialog', :locals => {:attachable => @solution} %>
