--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -6,7 +6,7 @@
   <div><%= f.label :username %><br />
   <%= f.text_field :username, :autofocus => true %></div>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <div><%= f.submit "Resend confirmation instructions", :class => submit_classes %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
