--- a/app/views/shared/_users_list.html.erb
+++ b/app/views/shared/_users_list.html.erb
@@ -38,7 +38,7 @@
           <% else %>
             <%= form_tag(form_action_path) do %>
               <%= hidden_field_tag hidden_field_name, user.id %>
-              <%= submit_tag submit_text %>
+              <%= submit_tag submit_text, :class => submit_classes %>
             <% end %>
           <% end %>
         <% end %></td>
