--- a/app/views/user_groups/_form.html.erb
+++ b/app/views/user_groups/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => submit_classes %>
   </div>
 <% end %>
