DRYed up most migrations

--- a/app/views/solutions/_form.html.erb
+++ b/app/views/solutions/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :summary %><br />
-    <%= f.text_area :summary %>
+    <%= f.text_area :summary, :class => "markItUp" %>
   </div>
   <div class="field">
     <%= f.label :content, 'Detailed Explanation' %><br />
