--- a/app/views/layouts/_application_header.html.erb
+++ b/app/views/layouts/_application_header.html.erb
@@ -11,7 +11,7 @@
                 :locals   => { :icon_color => "white" } %>
 
     <div id="application-header-logo">
-      <a href="<%= root_path %>" id="application-header-logo-link"></a>
+      <a href="<%= main_app.root_path %>" id="application-header-logo-link"></a>
     </div>
 
   </div>
