--- a/app/views/dev/base/_create_users.html.erb
+++ b/app/views/dev/base/_create_users.html.erb
@@ -17,6 +17,12 @@
         </div>
       </div>
       <div class='form-group'>
+        <label class='col-sm-3 control-label'>Username</label>
+        <div class='col-sm-9'>
+          <%= f.text_field :username, class: 'form-control' %>
+        </div>
+      </div>
+      <div class='form-group'>
           <label class='col-sm-3 control-label'>Admin?</label>
           <div class=' col-sm-9'>
 
