--- a/app/views/layouts/_application_bottom_nav.html.erb
+++ b/app/views/layouts/_application_bottom_nav.html.erb
@@ -8,7 +8,10 @@
       
       <%= link_to "About", nil %>
       <%= image_tag "links_dash.png" %>
-      
+
+      <%= link_to "Developers", main_app.developers_path %>
+      <%= image_tag "links_dash.png" %>      
+
       <%= link_to "Contact Us", nil %>
 
       <% if false %>
