--- a/app/views/layouts/_application_footer.html.erb
+++ b/app/views/layouts/_application_footer.html.erb
@@ -11,10 +11,7 @@
     </div>
 
     <div id="footer-copyright">
-      <%= link_to OpenStax::Utilities::Text.copyright('2013', COPYRIGHT_HOLDER), main_app.copyright_path %> |
-      <%= link_to "Terms of Use", "#" %> |
-      <%= link_to "Developers", main_app.developers_path %> |
-      <%= link_to "Contact Us",   "#" %>
+      <%= link_to OpenStax::Utilities::Text.copyright('2013', COPYRIGHT_HOLDER), main_app.copyright_path %> 
       <br/>
 
       Supported by
