Added release version of fine_print; updated terms controller and views to reflect changes

--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -3,14 +3,13 @@
 <div class="not-full-width">
   <p>To activate your account on <%= SITE_NAME %>, please review and accept the following site terms by checking the box below and then clicking "Register".</p>
 
-<%
-  contracts = [FinePrint::Utilities.latest_contract_named(:general_terms_of_use),
-               FinePrint::Utilities.latest_contract_named(:privacy_policy)]
+<% contracts = [FinePrint.get_contract(:general_terms_of_use),
+                FinePrint.get_contract(:privacy_policy)]
+print contracts
 
-  contract_links = contracts.collect do |contract|
-    link_to contract.title, show_terms_path(contract), remote: true
-  end
-%>
+   contract_links = contracts.collect do |contract|
+     link_to contract.title, show_terms_path(contract), remote: true
+   end %>
 
   <ul class="normal" style="margin-top:20px; margin-bottom: 20px">
     <% contract_links.each do |contract_link| %>
