--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -1,3 +1,7 @@
+
+
+<% if false ############################################################################## %>
+
 <%= nested_form_for(@exercise) do |f| %>
   <% if @exercise.errors.any? %>
     <div id="error_explanation">
@@ -70,3 +74,5 @@
 <% end %>
 
 <%= render :partial => 'attachments/dialog', :locals => {:attachable => @exercise} %>
+
+<% end ############################################################################## %>
