started backbone / api stuff

--- a/app/assets/stylesheets/layouts/application_body_only.css.scss
+++ b/app/assets/stylesheets/layouts/application_body_only.css.scss
@@ -8,6 +8,8 @@
 
   @include body-margins;
 
+  margin-top: 20px;
+
   #application-body-only-body-content {
     #application-body-only-body {
     }
