--- a/app/views/shared/_exercises_search.html.erb
+++ b/app/views/shared/_exercises_search.html.erb
@@ -69,4 +69,4 @@
                           :submit_text => submit_text } %>
 </div>
 
-<%= will_paginate @exercises unless @exercises.nil? %>
+<%= will_paginate @exercises unless @exercises.empty? %>
