--- a/app/assets/stylesheets/common_colors.css.scss
+++ b/app/assets/stylesheets/common_colors.css.scss
@@ -17,3 +17,5 @@ $ost_account_gray:  #9d9d9d;
 $application_background_color: rgb(247,243,241);
 
 $application_footer_background_color: #7d7d7d;
+
+$dark_font_color: #252525;
