--- a/app/assets/stylesheets/layouts/application_body_api_docs.css.scss
+++ b/app/assets/stylesheets/layouts/application_body_api_docs.css.scss
@@ -25,6 +25,7 @@
         margin-top:20px;
         font-size: 16px;
         line-height: 22px;
+        margin-bottom: 15px;
       }
     }    
 
@@ -58,6 +59,10 @@
     small {
       font-size: 14px;
     }
+  }
+
+  div p {
+    clear: both;
   }
 
   // position: relative;
