--- a/app/views/exercises/edit.html.erb
+++ b/app/views/exercises/edit.html.erb
@@ -2,8 +2,24 @@
   <%= javascript_include_tag 'miniapps/exercise_editor' %>
 <% end %>
 
+<% content_for :javascript do %>
+  <script type='text/javascript'>
+    $(document).ready(function() {
+      ExerciseEditor.start({exerciseId: <%= @exercise.id %>});
+    });
+  </script>
+<% end %>
+
 <div class='exercise-edit'>
 
   <%= render 'header', exercise: @exercise %>
 
+
+  <div class='exercise-edit-app'>
+  </div>
+
 </div>
+
+<script type='text/template' id='static-template'>
+  <p>Rendered by Marionette!</p>
+</script>
