adding mathjax and better content editor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
       <%= yield :javascript_includes %>
     <% end %>
 
+    <%= render 'layouts/application_mathjax' %>
+
   </head>
 
   <body>
