got add blank part working

--- a/app/assets/javascripts/miniapps/exercise_editor/templates/exercise.jst.ejs
+++ b/app/assets/javascripts/miniapps/exercise_editor/templates/exercise.jst.ejs
@@ -1,3 +1,9 @@
 <div class='exercise-background'></div>
 
 <div class='exercise-parts'></div>
+
+
+<button type="button" class="btn btn-sm js-add-part">
+<span class="glyphicon glyphicon-plus"></span>
+Add Part
+</button>
