--- a/app/assets/stylesheets/exercise_edit_app.css.scss
+++ b/app/assets/stylesheets/exercise_edit_app.css.scss
@@ -26,19 +26,7 @@
     padding-top: 4px;
   }
 
-  // div.overlay {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background: #000;
-  //   opacity: 0.15;
-  //   filter: alpha(opacity=15);
-  //   z-index: 100;
-  // }
-
-  textarea {
+  textarea.writemaths {
     position: relative;
   }
 
