tinymce with save button working

--- a/app/views/exercises/edit.html.erb
+++ b/app/views/exercises/edit.html.erb
@@ -1,5 +1,8 @@
 <% content_for :javascript_includes do %>
   <%= javascript_include_tag 'miniapps/exercise_editor' %>
+  <% if false %>
+  <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+  <% end %>
 <% end %>
 
 <% content_for :javascript do %>
