--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -27,6 +27,15 @@ button, input[type='submit'] {
   @extend .btn;
   @extend .btn-primary;
   @include border-radius(0px);
+  &:hover, &:focus {
+    color: white;
+  }
+}
+
+.btn {
+  &:hover, &:focus {
+    color: white;
+  } 
 }
 
 select, input[type='text'] {
