--- a/app/assets/stylesheets/exercise_edit_app.css.scss
+++ b/app/assets/stylesheets/exercise_edit_app.css.scss
@@ -49,6 +49,10 @@ $edit_app_light_gray: lighten($os_gray,50%);
     padding: 8px 0px;
   }
 
+  .choice {
+    margin: 6px 0px;
+  }
+
   .choice-label {
     font-size: 15px;
     float: left;
@@ -79,6 +83,21 @@ $edit_app_light_gray: lighten($os_gray,50%);
 
     &.selected {
       color: black
+    }
+  }
+
+  .choice-controls {
+    float: right;
+    width: 100px;
+    min-height: 60px;
+    padding-left: 15px;
+    button {
+      display: block;
+      margin: 4px 0px;
+    }
+
+    .edit-controls, .display-controls {
+      text-align: center;
     }
   }
 
